# image_classification

./: CMakeLists.txt  README.md
include/: Classifier.h  bow.h  utilities.h
samples/: CMakeLists.txt  DrawKeypoints.cpp  main.cpp
src/: CMakeLists.txt  Classifier.cpp  bow.cpp  uitilities.cpp
